--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -3,6 +3,12 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  /* switch to flexbox */
+  display: flex;
+  /* primary axis alignment */
+  justify-content: center;
+  /* secondary axis alignment */
+  align-items: center;
 }
 
 .box {
