--- a/foundations/flex/landing-page/style.css
+++ b/foundations/flex/landing-page/style.css
@@ -1,11 +1,14 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .header {
-    height: 100px;
-    padding: 24px;
+    padding: 32px;
     background-color: silver;
     display: flex;
     justify-content: space-between;
@@ -15,6 +18,7 @@ body {
 .left-header {
     gap: 24px;
     display: flex;
+    align-items: center;
 }
 
 .left-links {
@@ -25,8 +29,51 @@ body {
 
 }
 
+.homepage {
+    font-size: larger;
+    font-weight: bold;
+}
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
+
+.content {
+    padding: 16px;
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+    flex-wrap: wrap;
+}
+
+.tile-container {
+    width: 500px;
+    height: 500px;
+    padding: 16px;
+    background-color: salmon;
+    border: solid;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 16px;
+    flex: 1 0 auto;
+}
+
+.tile-header {
+    font-size: larger;
+    font-weight: bold;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+.footer {
+    padding: 24px;
+    background-color: silver;
+    display: flex;
+}
+
